<resources>
    <string name="app_name">TiendaMovil</string>
    <string name="titulo">Tienda Movil</string>
    <string name="lblMaterial">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad de manillas</string>
    <string name="calcular">Calcular</string>
    <string name="limpiar">Limpiar</string>
    <string name="moneda">Moneda</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="peso">Peso</string>
    <string name="dolar">Dolar</string>
    <string name="error_ingrese_valor">Debe ingresar un valor</string>
    <string name="error_ingrese_valor_mayor">Ingreso un numero mayor que 0</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dijes">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipos">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="monedas">
        <item>@string/peso</item>
        <item>@string/dolar</item>
    </string-array>


</resources>