<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblMaterial"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dije"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cantidad"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpiar" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>